# iPIC3D-new

./: .gitignore  CMakeLists.txt  array_comparison.cpp  buffer.hpp  c20.cpp  test.cpp  test.cu
include/: DataConnector.hpp  Field.hpp  HostPinnedBufferSH.hpp  MirrorHostDeviceBufferSH.hpp  Rename.sh
include/areaMapper/: AreaMapper.hpp
include/buffers/: CudaHelper.hpp  DeviceBufferSH.hpp  Field.hpp  FieldCPU.hpp  HostBufferCPUSH.hpp  HostBufferSH.hpp  HostPinnedBufferSH.hpp  MirrorHostDeviceBufferSH.hpp  VirtualBuffer.hpp
include/mpiCommunication/: MPICommunicator.hpp  MPICommunicatorField.hpp  MPIManager.hpp  MPISingleton.hpp
src/: deviceBufferSH.hpp  field.hpp  hostBufferSH.hpp  hostPinnedBufferSH.hpp  mirrorHostDeviceBufferSH.hpp  virtualBuffer.hpp
stuff/: arrayComparison.cpp
unitTest/testBuffers/: CMakeLists.txt  testBuffers.cu
unitTest/testCommunicatorField/: CMakeLists.txt  CMakeListsDardel.txt  mpirun.sh  run.slurm  testCommunicatorField.cpp
unitTest/testDataConnector/: CMakeLists.txt  testDataConnector.cu
unitTest/testField/: CMakeLists.txt  testField.cu
